<resources>
    <string name="app_name">CarFix</string>

    <string name="login_title">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="login_sign_up">Don\'t have an account? Sign up</string>

    <string name="register_title">Register</string>
    <string name="sign_up_password">Password (Minimum 6 characters)</string>
    <string name="sign_up">Sign up</string>
    <string name="register_sign_in">Already have an account? Sign in</string>

    <string name="current_user">Current_user@mail.com</string>
    <string name="logout">Log out</string>

    <string name="repair_list">Car Repair List</string>

    <string name="search">Search…</string>

    <string name="car_brand_label">Car brand:</string>
    <string name="car_model_label">Car model:</string>
    <string name="car_number_label">Car number:</string>
    <string name="repair_type_label">Repair type:</string>
    <string name="master_name_label">Master name:</string>
    <string name="repair_number_label">Repair №</string>

    <string name="repair_number">0</string>
    <string name="car_brand">Car brand</string>
    <string name="car_model">Car model</string>
    <string name="car_number">Car number</string>
    <string name="repair_type">Repair type</string>
    <string name="master_name">Master name</string>

    <string name="new_repair">New Repair</string>
    <string name="add_repair">Add repair</string>
    <string name="back">Back</string>
    <string name="back_title">Exit?</string>
    <string name="back_confirm_not_to_add">Are you sure you want to return without saving?</string>
    <string name="add_success">Successfully added!</string>
    <string name="add_failed">Please fill out all fields.</string>

    <string name="update_repair">Update repair</string>
    <string name="update_repair_success">Successfully updated!</string>
    <string name="back_confirm_to_delete">Are you sure you want to delete?</string>
    <string name="delete_title">Delete?</string>
    <string name="update_delete_success">Successfully deleted!</string>


    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>